--- a/files/pipeline/logstash.conf
+++ b/files/pipeline/logstash.conf
@@ -4,15 +4,18 @@ input {
     start_position => "beginning"
     sincedb_path => "/dev/null"
   }
+  http {
+    port => 5044
+  }
 }
 
 filter {
-
+  
 }
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ["http://elasticsearch:9200"]
     index => "nginx-access-logs-%{+YYYY.MM.dd}"
   }
 }
