--- a/files/filebeat.yml
+++ b/files/filebeat.yml
@@ -13,9 +13,12 @@ processors:
     overwrite_keys: true
 
 output.elasticsearch:
-  hosts: ["elasticsearch:9200"]
-  indices:
-    - index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
+  hosts: ["http://elasticsearch:9200"]
+  indices: 
+    - index: "filebeat-nginx-access-logs-%{+YYYY.MM.dd}"
 
 logging.json: true
 logging.metrics.enabled: false
+
+
+
